--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -178,19 +178,20 @@ head
       //img(class="media-object img-circle" src="/bootstrap/images/seo.jpg" style='margin-left:5px;margin-top:30px;width:64px;height:64px;' alt="...")
       span(class='glyphicon glyphicon-align-justify' id='showLeft' style='color:#333;font-size:30px;margin-top:20px;')
     .container(style='padding-left:94px;')  
-      .row(style='color:white;')
+      .row(style='color:#ccc;')
         .col-xs-12
-          h1 Setings
+          h1 Settings
           h3 #{mail}
-      .row(style='color:#ccc;text-align:center;')
+      .row(style='color:white;')
         .col-xs-12
           h2 Private
           .btn-group(role="group" aria-label="...")
             button(type="button" class="btn btn-default active") Yes
             button(type="button" class="btn btn-default") No
-      .row
+      .row(style='color:white;')
         .col-xs-12
-          
+          h2 Color themes
+
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
