--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -186,8 +186,8 @@ head
         .col-xs-12
           h2 Private
           .btn-group(role="group" aria-label="...")
-            button(type="button" class="btn btn-default active") Yes
-            button(type="button" class="btn btn-default") No
+            button(type="button" class="btn btn-warning active") Yes
+            button(type="button" class="btn btn-warning") No
       .row(style='color:white;')
         .col-xs-12
           h2 Color themes
