--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -191,7 +191,12 @@ head
       .row(style='color:white;')
         .col-xs-12
           h2 Color themes
-
+      .row(style='color:white;')
+        .col-xs-12
+          h2 Share your page
+          .highlight
+            pre
+              code(class='language-bash') http://peopleandbooks.com/lists/#{uid}
       script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js')
       script(async src='/js/bootstrap.min.js')
       script.
