--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -198,6 +198,21 @@ head
           h2 Color themes
       .row.cont
         .col-xs-12
+        .checkbox
+          label
+            input(type="checkbox" id='star' disabled) 
+            span(class='glyphicon glyphicon-stop' style='color:#52CA8F;')
+              span(class='glyphicon glyphicon-stop' style='color:#FAB142;')
+        .checkbox
+          label
+            input(type="checkbox" id='star' disabled) 
+            span(class='glyphicon glyphicon-stop' style='color:rgb(213, 74, 95);')
+              span(class='glyphicon glyphicon-stop' style='color:#00788E;')
+        .checkbox
+          label
+            input(type="checkbox" id='star' disabled) 
+            span(class='glyphicon glyphicon-stop' style='color:#00657C;')
+              span(class='glyphicon glyphicon-stop' style='color:rgb(0, 182, 205);')
       .row(style='color:white;')
         .col-xs-12
           h2 Share your page
