--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -200,19 +200,19 @@ head
         .col-xs-12
         .checkbox
           label
-            input(type="checkbox" id='star' disabled) 
-            span(class='glyphicon glyphicon-stop' style='color:#52CA8F;')
-              span(class='glyphicon glyphicon-stop' style='color:#FAB142;')
+            input(type="checkbox" id='star' checked) 
+            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#52CA8F;')
+            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#FAB142;')
         .checkbox
           label
-            input(type="checkbox" id='star' disabled) 
-            span(class='glyphicon glyphicon-stop' style='color:rgb(213, 74, 95);')
-              span(class='glyphicon glyphicon-stop' style='color:#00788E;')
+            input(type="checkbox" id='star' ) 
+            span(class='glyphicon glyphicon-stop' style='font-size:30px;font-color:rgb(213, 74, 95);')
+            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00788E;')
         .checkbox
           label
-            input(type="checkbox" id='star' disabled) 
-            span(class='glyphicon glyphicon-stop' style='color:#00657C;')
-              span(class='glyphicon glyphicon-stop' style='color:rgb(0, 182, 205);')
+            input(type="checkbox" id='star' ) 
+            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00657C;')
+            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(0, 182, 205);')
       .row(style='color:white;')
         .col-xs-12
           h2 Share your page
