--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -206,7 +206,7 @@ head
         .checkbox
           label
             input(type="checkbox" id='star' ) 
-            span(class='glyphicon glyphicon-stop' style='font-size:30px;font-color:rgb(213, 74, 95);')
+            span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(213, 74, 95);')
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00788E;')
         .checkbox
           label
