--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -213,6 +213,7 @@ head
             input(type="checkbox" id='star' ) 
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00657C;')
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(0, 182, 205);')
+        button(class='btn btn-default' type='button') Change
       .row(style='color:white;')
         .col-xs-12
           h2 Share your page
