--- a/views/404.jade
+++ b/views/404.jade
@@ -30,8 +30,8 @@ head
   body
     .container-fluid
       .row
-        .col-xs-4.col-xs-offset-4(style='text-align:center;margin-top:20;vh;') 
-          img(src='/images/pblogov4black.png' style='margin-left:auto;margin-right:auto;height:200px;width:200px;mergin-bottom:5vh;')
+        .col-xs-4.col-xs-offset-4(style='text-align:center;margin-top:20vh;') 
+          img(src='/images/pblogov3.png' style='margin-left:auto;margin-right:auto;height:200px;width:200px;mergin-bottom:5vh;')
           h2 404
          
 
