--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -184,10 +184,9 @@ head
       .row(style='color:#ccc;')
         .col-xs-12
           h1 Settings
-          h3 #{mail}
       .row(style='color:white;')
         .col-xs-12
-          h2 Private
+          h2 Private:
       .row.cont
         .col-xs-12
           .btn-group(role="group" aria-label="...")
@@ -195,7 +194,7 @@ head
             button(type="button" class="btn btn-warning") No
       .row(style='color:white;')
         .col-xs-12
-          h2 Color themes
+          h2 Color themes:
       .row.cont
         .col-xs-12
         .checkbox
@@ -213,10 +212,9 @@ head
             input(type="checkbox" id='star' ) 
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00657C;')
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(0, 182, 205);')
-        button(class='btn btn-default' type='button') Change
       .row(style='color:white;')
         .col-xs-12
-          h2 Share your page
+          h2 Share your page:
       .row.cont
         .col-xs-6
           .highlight
