--- a/views/emptymindexreg.jade
+++ b/views/emptymindexreg.jade
@@ -444,7 +444,7 @@ head
           author='--';
         }
         else {
-          if(author.length()>50){
+          if(author.length>50){
             alert('Author name is too long');
             allowsubmit=1;
             return;
@@ -457,7 +457,7 @@ head
           return
         }
         else {
-          if(booktitle.length()>50){
+          if(booktitle.length>50){
             alert('Title is too long');
             allowsubmit=1;
             return;
