--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -497,7 +497,7 @@ head
           author='--';
         }
         else {
-          if(author.length()>50){
+          if(author.length>50){
             alert('Author name is too long');
             allowsubmit=1;
             return;
@@ -510,7 +510,7 @@ head
           return
         }
         else {
-          if(booktitle.length()>50){
+          if(booktitle.length>50){
             alert('Title is too long');
             allowsubmit=1;
             return;
