--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -681,7 +681,7 @@ head
         }
         var uid = #{uid};
         var moviestar;
-        var attention;
+        var movieattention;
         var newmovie;
         if($('#moviestar').is(':checked')){
           moviestar = 1;
