--- a/views/userlist.jade
+++ b/views/userlist.jade
@@ -100,9 +100,9 @@ head
                     td 
                       | #{user.mail}
                     td 
-                      | #{user.newbooks}
+                      | #{user.totalbooks}
                     td 
-                      | #{user.readbooks}
+                      | #{user.totalmovies}
                     td
                       | #{user.regdate.day}.#{user.regdate.month}.#{user.regdate.year}
                     td
