--- a/views/newemptyindexreg.jade
+++ b/views/newemptyindexreg.jade
@@ -694,6 +694,7 @@ head
         }
         else {
           var mid = parsed.mid;
+          console.log('mid is: '+mid);
           $('#addmovie').slideToggle();
          $('#year').val('');
           $('#movietitle').val('');
