--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -248,7 +248,8 @@ head
        h5 small,
        h6 .small,
        h6 small {
-      color: rgba(245, 245, 245, 0.68);
+      color: white;
+      opacity: 0.68;
       }
   body
     script.
