--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -222,6 +222,7 @@ head
       .flick:hover {
         cursor:pointer;
         background-color:rgb(0,0,0);
+        color:white;
         opacity:0.2;
       }
       .h1 .small,
@@ -250,6 +251,9 @@ head
        h6 small {
       color: white;
       opacity: 0.68;
+      }
+      .alreadyb h4 small{
+        opacity:1;
       }
   body
     script.
