--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -222,7 +222,7 @@ head
       .flick:hover {
         cursor:pointer;
         background-color:rgb(0,0,0);
-        color:white;
+        color:white !important;
         opacity:0.2;
       }
       .h1 .small,
@@ -253,7 +253,7 @@ head
       opacity: 0.68;
       }
       .alreadyb h4 small{
-        opacity:1;
+        opacity:1 !important;
       }
   body
     script.
