--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -221,9 +221,7 @@ head
       }
       .flick:hover {
         cursor:pointer;
-        background-color:rgb(0,0,0);
-        color:white !important;
-        opacity:0.2;
+        background-color:#65C093;
       }
       .h1 .small,
        .h1 small,
