--- a/views/indexreg.jade
+++ b/views/indexreg.jade
@@ -221,7 +221,7 @@ head
       }
       .flick:hover {
         cursor:pointer;
-        background-color:#65C093;
+        background-color:rgb(123, 226, 175);
       }
       .h1 .small,
        .h1 small,
