--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -204,7 +204,7 @@ head
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#FAB142;')
         .checkbox
           label
-            input(type="checkbox" id='ssecond' ) 
+            input(type="checkbox" id='second' ) 
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:rgb(213, 74, 95);')
             span(class='glyphicon glyphicon-stop' style='font-size:30px;color:#00788E;')
         .checkbox
