--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -173,7 +173,7 @@ head
            span(class='input-group-btn')
              button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
                span(class='glyphicon glyphicon-search') 
-      a(href="#") Настройки
+      a(href="http://peopleandbooks.com") главная
       a(href='/about') О проекте
       a(href="/logout") Выйти
       img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
@@ -296,7 +296,9 @@ head
         {
          
         }
-        else { alert('Colors changed!');}
+        else { alert('Colors changed!');
+        allowstylechange=1;
+        }
         }
         };
         request.open('POST', '/settings/cc', true);
@@ -307,4 +309,38 @@ head
           }
         //end of changecolor
         $('#changecolor').click(changecolor);
+        //pub change function
+        var allowpubchange =1;
+        function pubchenge(to) {
+          if(!allowpubchange){
+            return;
+          }
+         allowpubchange =0;
+        request = new XMLHttpRequest();
+        request.onreadystatechange = function () {
+        var DONE = this.DONE || 4;
+        if (this.readyState === DONE){
+        parsed = JSON.parse(request.responseText);
+        console.log(parsed);
+        // do your job here
+        if (parsed.trouble === 1)
+        {
+         
+        }
+        else { 
+          if(to)
+          {alert('Your list is publicly avaliable');}
+         else 
+          {alert('Your list is private');}
+        allowpubchange=1;
+        }
+        }
+        };
+        request.open('POST', '/settings/pc', true);
+        request.setRequestHeader('X-Requested-With', 'XMLHttpRequest');  // Tells server that this call is made for ajax purposes.
+        request.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+        // Most libraries like jQuery/Prototype/Dojo do this
+        request.send("uid=#{uid}&pub="+to);
+          }
+        //end of changecolor
       
