--- a/views/restricted.jade
+++ b/views/restricted.jade
@@ -40,8 +40,22 @@ head
       }
       .btn {
         border-radius:30px;
-        border:1px solid gray;
-        color:gray;
+        border:0px;
+        background-color:#ddd;
+        color:white !important;
+      }
+      textarea:hover, 
+      input:hover, 
+      textarea:active, 
+      input:active, 
+      textarea:focus, 
+      input:focus,
+      button:focus,
+      button:active,
+      button:hover
+      {
+          outline:0px !important;
+          -webkit-appearance:none;
       }
   body
     .container
