--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -173,7 +173,8 @@ head
            span(class='input-group-btn')
              button(class="btn btn-default" type="submit" id='searchbutton' style='padding-top:9px;padding-bottom:9px;background-color:#333;color:gray;border-color:#333;border-top-right-radius:30px;border-bottom-right-radius:30px;')
                span(class='glyphicon glyphicon-search') 
-      a(href="http://peopleandbooks.com") Мои списки
+      a(href="/") Мои списки
+      a(href="/people") Списки друзей
       a(href='/about') О проекте
       a(href="/logout") Выйти
       img(class="media-object img-circle" src="/images/pblogov4.png" style='position:absolute;opacity:0.2;left:88px;bottom:20px;width:64px;height:64px;' alt="...")
