--- a/views/newsettings.jade
+++ b/views/newsettings.jade
@@ -161,6 +161,9 @@ head
       .cont {
         margin-left:20px;
       }
+      a {
+        color:white !important;
+      }
   body
     script.
       if(screen.width < 414){
